AG-9032 - fixed resize handles visible above overlay

--- a/grid-community-modules/styles/src/internal/base/parts/_common-structural.scss
+++ b/grid-community-modules/styles/src/internal/base/parts/_common-structural.scss
@@ -882,6 +882,7 @@
         position: absolute;
         top: 0;
         width: 100%;
+        z-index: 1;
     }
 
     .ag-overlay-panel {
